<resources>
    <string name="app_name">Swagbag</string>
    <string name="google_map_api_key">AIzaSyB_dTh5gK_Jw0K-Snt7CG84DarcmxnAOOA</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="clothing">Clothing</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="username_email">Username/Email*</string>
    <string name="password">Password*</string>
    <string name="or">or</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="reset_password">Reset Password</string>
    <string name="dummy">"Lorem ipsum dolor sit amet, consectetur adipiscing elit. A interdum cras sagittis, nec ut euismod ullamcorper sed. Ornare vulputate non egestas quam sed nunc. Porttitor metus et dui egestas placerat leo nec nisi, suspendisse. "</string>
    <string name="number_or_email">Number/Email*</string>
    <string name="send_otp">Send OTP</string>
    <string name="enter_varification_code">Enter Varification Code</string>
    <string name="submit">Submit</string>
    <string name="verification_code">Verification Code</string>
    <string name="create_password">Create Password</string>
    <string name="new_password">New Password*</string>
    <string name="confirm_password">Confirm Password*</string>
    <string name="save">Save</string>
    <string name="notificaiton_notify">We will notify you once we have something for you</string>
    <string name="no_notification">No Notification</string>
    <string name="notification">Notification</string>
    <string name="search_for_brands_products_here"><![CDATA[Search for brands & Products here...]]></string>
    <string name="search">Search</string>
    <string name="camera_permission_required">Camera Permission Required</string>
    <string name="camera_permission_setting"><![CDATA[Media visual search cannot work without storage permisiion. To use this feature, turn on Media & Storage permission in Settings > Permissions.]]></string>
    <string name="enable_permission">Enable Permission</string>
    <string name="not_now">Not Now</string>
    <string name="media_storage_permission_required"><![CDATA[Media & Storage Permission Required]]></string>
    <string name="english_united_states">English (United States)</string>
    <string name="select_photo">Select Photo</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="hey_your_bag_is_empty">Hey, your bag is empty!</string>
    <string name="there_is_nothing_in_your_bag_let_s_add_some_items">There is nothing in your bag. Let’s add some items.</string>
    <string name="shopping_beg">Shopping Bag</string>
    <string name="your_wishlist_is_empty">Your wishlist is empty!</string>
    <string name="empty_wishlist_lines">Save items that you like in your wishlist. Review them anytime and easily move them to the bag.</string>
    <string name="shop_now">Shop Now</string>
    <string name="wishlist">Wishlist</string>
    <string name="womens">Womens</string>
    <string name="lectus_tempus_fusce_lobortis_convallis">Lectus tempus fusce lobortis convallis.</string>
    <string name="category">Category</string>
    <string name="save_your_credit_debit_cards">Save Your Credit/Debit Cards</string>
    <string name="empty_card_lines">It’s convenient to pay with saved cards. Your card information will be secure, we use 128-bit encryption</string>
    <string name="add_card">Add Card</string>
    <string name="saved_cards">Saved Cards</string>
    <string name="edit_address">EDIT ADDRESS</string>
    <string name="card_number">Card Number*</string>
    <string name="card_name">Card Name*</string>
    <string name="enter_month">Enter Month*</string>
    <string name="enter_year">Enter Year*</string>
    <string name="add_new_addresses">+ ADD NEW ADDRESS</string>
    <string name="add_new_card">+ ADD NEW CARD</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="stars">**** **** ****</string>
    <string name="card_numbers">**** **** **** 1234</string>
    <string name="_1234">1234</string>
    <string name="cardholder_name">Cardholder Name</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="new_arrivals">NEW ARRIVALS</string>
    <string name="most_popular">MOST POPULAR</string>
    <string name="recommended_for_you">RECOMMENDED FOR YOU</string>
    <string name="most_wanted">Most Wanted</string>
    <string name="up_to_50_off">Up To 50% Off</string>
    <string name="kids_wear_stylish_collection">Kids wear stylish collection</string>
    <string name="men">Men</string>
    <string name="sort_by">Sort By</string>
    <string name="filter">Filter</string>
    <string name="_1_1k">1.1k</string>
    <string name="verganan">verganan</string>
    <string name="Rs">\u20B9</string>
    <string name="products">Products</string>
    <string name="categories">Categories</string>
    <string name="frequently_asked_questions">Frequently Asked Questions</string>
    <string name="view_t_c"><![CDATA[view T&C]]></string>
    <string name="faqs">FAQs</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="any_queries_or_suggestions_would_be_appreciated">Any queries or suggestions would be appreciated</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="message">Message</string>
    <string name="swagbag_terms_of_uses">swagbag: terms of uses</string>
    <string name="long_paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Rhoncus convallis erat at ac vel quis. \nEnim sagittis auctor ultricies sit massa maecenas purus. Semper aliquet dui senectus massa. Ultrices tristique id hendrerit iaculis dignissim cum. Sagittis, vulputate vulputate faucibus nunc feugiat vestibulum vulputate nascetur. \n\nA, est tellus duis lacus, lectus quis fusce. Imperdiet maecenas pellentesque felis, nunc elit fermentum est placerat iaculis. Dui blandit ac lectus scelerisque mauris, felis enim. Nunc cursus condimentum ornare at id adipiscing. \n\nBibendum volutpat augue imperdiet egestas purus libero, viverra. Sem amet, donec aliquam massa. Volutpat adipiscing vivamus faucibus cursus ipsum. Ultricies sem eu nunc integer sed ultrices neque pulvinar turpis. Mattis nec varius mattis sagittis, quis ac lectus massa. Nibh molestie platea elit purus in. Tincidunt ut in viverra porta magna sit vitae. Nibh mi senectus nunc, sollicitudin. Consectetur egestas nam lorem at penatibus amet, lorem. Vivamus egestas pellentesque vitae praesent cras. Cursus imperdiet lectus semper augue proin. Nisl egestas ut gravida id consequat, nunc ipsum. Vulputate magna mi sit at. Viverra ut urna semper suspendisse vel tincidunt ullamcorper. In tellus tortor vitae venenatis viverra non, ut. Erat tellus velit ipsum nisl, sagittis sed. Posuere sit nulla cras ullamcorper suspendisse risus.</string>
    <string name="product_paragrah">Bibendum volutpat augue imperdiet egestas purus libero, viverra. Sem amet, donec aliquam massa. Volutpat adipiscing vivamus faucibus cursus ipsum. Ultricies sem eu nunc integer sed ultrices neque pulvinar turpis. Mattis nec varius mattis sagittis, quis ac lectus massa. Nibh molestie platea elit purus in. Tincidunt ut in viverra porta magna sit vitae. Nibh mi senectus nunc, sollicitudin. Consectetur egestas nam lorem at penatibus amet, lorem. Vivamus egestas pellentesque vitae praesent cras. Cursus imperdiet lectus semper augue proin. Nisl egestas ut gravida id consequat, nunc ipsum. Vulputate magna mi sit at. Viverra ut urna semper suspendisse vel tincidunt ullamcorper. In tellus tortor vitae venenatis viverra non, ut. Erat tellus velit ipsum nisl, sagittis sed. Posuere sit nulla cras ullamcorper suspendisse risus.</string>
    <string name="long_paragraph1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Rhoncus convallis erat at ac vel quis. Enim sagittis auctor ultricies sit massa maecenas purus. Semper aliquet dui senectus massa. Ultrices tristique id hendrerit iaculis dignissim cum\n\n.Sagittis, vulputate vulputate faucibus nunc feugiat vestibulum vulputate nascetur. A, est tellus duis lacus, lectus quis fusce. Imperdiet maecenas pellentesque felis, nunc elit fermentum est placerat iaculis. Dui blandit ac lectus scelerisque mauris, felis enim. Nunc cursus condimentum ornare at id adipiscing. Bibendum volutpat augue imperdiet egestas purus libero, viverra. Sem amet, donec aliquam massa. Volutpat adipiscing vivamus faucibus cursus ipsum. Ultricies sem eu nunc integer sed ultrices neque pulvinar turpis. Mattis nec varius mattis sagittis, quis ac lectus massa. Nibh molestie platea elit purus in. Tincidunt ut in viverra porta magna sit vitae. Nibh mi senectus nunc, sollicitudin. Consectetur egestas nam lorem at penatibus amet, lorem. Vivamus egestas pellentesque vitae praesent cras. Cursus imperdiet lectus semper augue proin.\n\n Nisl egestas ut gravida id consequat, nunc ipsum. Vulputate magna mi sit at. Viverra ut urna semper suspendisse vel tincidunt ullamcorper. In tellus tortor vitae venenatis viverra non, ut. Erat tellus velit ipsum nisl, sagittis sed. Posuere sit nulla cras ullamcorper suspendisse risus.</string>
    <string name="terms_of_uses">Terms Of Usage</string>
    <string name="swagbag_privacy_policy">swagbag: privacy policy</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="profile">Profile</string>
    <string name="birthday">Birthday</string>
    <string name="location">Location</string>
    <string name="save_details">Save Details</string>
    <string name="help_center">Help Center</string>
    <string name="need_help_with_recent_purchase">Need help with recent purchase?</string>
    <string name="payment_refund">Payment/Refund</string>
    <string name="offer_discount_coupons">Offer/Discount/Coupons</string>
    <string name="manage_your_account">Manage Your Account</string>
    <string name="other">Other</string>
    <string name="show_older_queries">Show Older Queries</string>
    <string name="want_to_reach_us_the_old_way">Want to reach us the old way?</string>
    <string name="postal_address">Postal Address</string>
    <string name="confirmed">Confirmed</string>
    <string name="my_payment_has_been_debited_multiple_times">my payment has been debited multiple times</string>
    <string name="still_need_help">Still need help?</string>
    <string name="was_this_helpful">Was this helpful?</string>
    <string name="have_queries_please_get_in_touch_and_we_will_be_happy_to_help_you">Have queries? Please get in touch and we will be happy to help you.</string>
    <string name="for_a_better_experience_call_from_your_registered_number">For a better experience, call from your registered number.</string>
    <string name="queries_from">Queries from</string>
    <string name="there_were_no_queries_raised_in">There were no queries raised in </string>
    <string name="different_dates">Different Dates</string>
    <string name="search_queries_from">Search queries from </string>
    <string name="return_policy_facility">Return Processing Facility</string>
    <string name="name_star">Name*</string>
    <string name="email_star">Email*</string>
    <string name="pincode">Pincode</string>
    <string name="state">State*</string>
    <string name="address_house_no_street_area">Address (House No, Street, Area) *</string>
    <string name="landmark">Landmark</string>
    <string name="type_of_address">Type of Address*</string>
    <string name="home">Home</string>
    <string name="returns">Return</string>
    <string name="office">Office</string>
    <string name="last_name">Last Name*</string>
    <string name="first_name">First Name*</string>
</resources>