<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/auth_bg_color"
    tools:context=".user.auth.signup.SignUpFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:padding="@dimen/screen_horizontal_padding"
        android:layout_height="match_parent">


    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@drawable/ic_shopping_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

     <View
         android:id="@+id/viewSignIn"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         app:layout_constraintBottom_toTopOf="@id/siginConstLyt"
         app:layout_constraintTop_toBottomOf="@id/imageView6" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/siginConstLyt"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rec_white_15"
        android:paddingHorizontal="@dimen/auth_horizontal_padding"
        android:paddingVertical="@dimen/auth_vertical_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6">

        <TextView
            android:id="@+id/signIn"
            style="@style/roboto_normal_16_state_green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textColor="@color/spanish_grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            style="@style/roboto_normal_16_state_green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dimen_15"
            android:text="@string/sign_up"
            android:textColor="@color/day_state_green_night_Cambridge_Blue"
            app:layout_constraintBottom_toBottomOf="@+id/signIn"
            app:layout_constraintEnd_toStartOf="@+id/signIn"
            app:layout_constraintTop_toTopOf="@+id/signIn" />

        <TextView
            android:id="@+id/textView3"
            style="@style/roboto_normal_30_queen_blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/auth_horizontal_padding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/firstName"
                android:hint="@string/first_name" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout12"
            android:layout_marginTop="@dimen/space_between_views"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/lastName"
                android:hint="@string/last_name" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout3"
            android:layout_marginTop="@dimen/space_between_views"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout12">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_star"
                android:id="@+id/email"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_between_views"
            app:endIconMode="password_toggle"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
            tools:layout_editor_absoluteX="1dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:id="@+id/password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout21"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/space_between_views"
            android:layout_height="wrap_content"
            app:endIconMode="password_toggle"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
            tools:layout_editor_absoluteX="1dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:id="@+id/confirmPassword"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/btnSignUp"
            style="@style/roboto_normal_18_white"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_width"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/space_between_views"
            android:background="@drawable/button_background"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout21" />

        <TextView
            android:id="@+id/textView6"
            style="@style/roboto_normal_10_sonic_silver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/dimen_15"
            android:text="@string/or"
            app:layout_constraintEnd_toEndOf="@+id/btnSignUp"
            app:layout_constraintStart_toStartOf="@+id/btnSignUp"
            app:layout_constraintTop_toBottomOf="@+id/btnSignUp" />


        <TextView
            android:id="@+id/btnGoogle"
            style="@style/roboto_normal_18_white"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_width"
            android:layout_marginTop="@dimen/space_between_views"
            android:textColor="@color/white"
            android:layout_marginEnd="@dimen/dimen_15"
            android:background="@drawable/google_button_background"
            android:gravity="center"
            android:text="@string/google"
            android:textAlignment="center"
            app:layout_constraintEnd_toStartOf="@+id/btnFacebook"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />


        <TextView
            android:id="@+id/btnFacebook"
            style="@style/roboto_normal_18_white"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_width"
            android:layout_marginTop="@dimen/space_between_views"
            android:textColor="@color/white"
            android:background="@drawable/facebook_button_background"
            android:gravity="center"
            android:text="@string/facebook"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnGoogle"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />


    </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>