<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".contactus.ContactUsFragment">


    <include
        android:id="@+id/include"
        layout="@layout/toolbar_with_no_menu_white_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/screen_horizontal_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include">

        <TextView
            android:id="@+id/textView25"
            style="@style/roboto_normal_14_davys_grey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_us"
            android:textColor="@color/outer_space"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView27"
            style="@style/roboto_normal_12_sonic_silver"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/any_queries_or_suggestions_would_be_appreciated"
            app:layout_constraintEnd_toStartOf="@+id/imageView27"
            app:layout_constraintStart_toStartOf="@+id/textView25"
            app:layout_constraintTop_toBottomOf="@+id/textView25" />


        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/dimen_5"
            android:layout_margin="@dimen/screen_margin_5"
            app:cardElevation="@dimen/dimen_5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView27">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/space_between_views">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout7"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout8"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_between_views"
                    app:layout_constraintEnd_toEndOf="@+id/textInputLayout7"
                    app:layout_constraintStart_toStartOf="@+id/textInputLayout7"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout7">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_between_views"
                    app:layout_constraintEnd_toEndOf="@+id/textInputLayout8"
                    app:layout_constraintStart_toStartOf="@+id/textInputLayout8"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout8">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtMessage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/message" />


                </com.google.android.material.textfield.TextInputLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <ImageView
            android:id="@+id/imageView27"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/conact_us"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_width"
        android:text="@string/save"
        android:textAllCaps="true"
        android:gravity="center"
        android:background="@drawable/rec_up_round"
        style="@style/roboto_normal_18_white"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>